fix overlay mobile alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,24 +34,9 @@ body {
   position: fixed;
   overflow: hidden;
   overscroll-behavior-y: none;
-  background-color: #101010;
-  background: radial-gradient(circle at bottom center, #212121 0%, #101010 80%);
+  background-color: #fff;
   font-family: 'Helvetica';
   -webkit-font-smoothing: antialiased;
-}
-
-.caption {
-  pointer-events: none;
-  position: fixed;
-  top: 0;
-  right: 0;
-  margin: 80px;
-  color: white;
-  font-size: 8em;
-  font-weight: 100;
-  line-height: 1em;
-  font-variant-numeric: tabular-nums;
-  -webkit-font-smoothing: auto;
 }
 
 .dot {
@@ -61,7 +46,7 @@ body {
   display: inline-block;
   max-width: 600px;
   padding: 0;
-  padding: 80px;
+  padding: 7vh 0 0 10vw;
   color: lightskyblue;
   line-height: 1.6em;
   font-size: 15px;
@@ -150,4 +135,19 @@ a:hover {
 
 .scroll > a {
   color: goldenrod;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+canvas {
+  opacity: 0;
+  touch-action: none;
+  animation: fade-in 3s ease 0.5s forwards;
 }
